tests/forof/forof.exp
Error ----------------------------------------------------------------------------------------------------- forof.js:7:6

Cannot cast `x` to string because number [1] is incompatible with string [2].

   forof.js:7:6
   7|     (x: string); // Error - number ~> string
           ^

References:
   forof.js:5:31
   5| function testArray(arr: Array<number>): void {
                                    ^^^^^^ [1]
   forof.js:7:9
   7|     (x: string); // Error - number ~> string
              ^^^^^^ [2]


Error ---------------------------------------------------------------------------------------------------- forof.js:13:6

Cannot cast `x` to string because number [1] is incompatible with string [2].

   forof.js:13:6
   13|     (x: string); // Error - number ~> string
            ^

References:
   forof.js:11:43
   11| function testIterable1(iterable: Iterable<number>): void {
                                                 ^^^^^^ [1]
   forof.js:13:9
   13|     (x: string); // Error - number ~> string
               ^^^^^^ [2]


Error ---------------------------------------------------------------------------------------------------- forof.js:25:6

Cannot cast `x` to number because string [1] is incompatible with number [2].

   forof.js:25:6
    25|     (x: number); // Error - string ~> number
             ^

References:
   <BUILTINS>/core.js:293:28
   293|     @@iterator(): Iterator<string>;
                                   ^^^^^^ [1]
   forof.js:25:9
    25|     (x: number); // Error - string ~> number
                ^^^^^^ [2]


Error ---------------------------------------------------------------------------------------------------- forof.js:32:6

Cannot cast `elem` to number because tuple type [1] is incompatible with number [2].

   forof.js:32:6
    32|     (elem: number); // Error - tuple ~> number
             ^^^^

References:
   <BUILTINS>/core.js:545:28
   545|     @@iterator(): Iterator<[K, V]>;
                                   ^^^^^^ [1]
   forof.js:32:12
    32|     (elem: number); // Error - tuple ~> number
                   ^^^^^^ [2]


Error ---------------------------------------------------------------------------------------------------- forof.js:39:6

Cannot cast `elem` to number because tuple type [1] is incompatible with number [2].

   forof.js:39:6
    39|     (elem: number); // Error - tuple ~> number
             ^^^^

References:
   <BUILTINS>/core.js:545:28
   545|     @@iterator(): Iterator<[K, V]>;
                                   ^^^^^^ [1]
   forof.js:39:12
    39|     (elem: number); // Error - tuple ~> number
                   ^^^^^^ [2]


Error ---------------------------------------------------------------------------------------------------- forof.js:45:6

Cannot cast `x` to number because string [1] is incompatible with number [2].

   forof.js:45:6
   45|     (x: number); // Error - string ~> number
            ^

References:
   forof.js:43:28
   43| function testSet1(set: Set<string>): void {
                                  ^^^^^^ [1]
   forof.js:45:9
   45|     (x: number); // Error - string ~> number
               ^^^^^^ [2]



Found 6 errors
